@@ -1,4 +1,4 @@
-%token TNUMBER ADDR IPADDR IP6ADDR CIDR FROM RCPT EMAIL PEER AUTOWHITE GREYLIST NOAUTH NOACCESSDB NOSPF QUIET TESTMODE VERBOSE PIDFILE GLDUMPFILE PATH TDELAY SUBNETMATCH SUBNETMATCH6 SOCKET USER NODETACH REGEX REPORT NONE DELAYS NODELAYS ALL LAZYAW GLDUMPFREQ GLTIMEOUT DOMAIN DOMAINNAME SYNCADDR PORT ACL WHITELIST DEFAULT STAR DELAYEDREJECT
+%token TNUMBER ADDR IPADDR IP6ADDR CIDR FROM RCPT EMAIL PEER AUTOWHITE GREYLIST NOAUTH NOACCESSDB EXTENDEDREGEX NOSPF QUIET TESTMODE VERBOSE PIDFILE GLDUMPFILE PATH TDELAY SUBNETMATCH SUBNETMATCH6 SOCKET USER NODETACH REGEX REPORT NONE DELAYS NODELAYS ALL LAZYAW GLDUMPFREQ GLTIMEOUT DOMAIN DOMAINNAME SYNCADDR PORT ACL WHITELIST DEFAULT STAR DELAYEDREJECT
 
 %{
 #include "config.h"
@@ -6,7 +6,7 @@
 #ifdef HAVE_SYS_CDEFS_H
 #include <sys/cdefs.h>
 #ifdef __RCSID  
-__RCSID("$Id: conf_yacc.y,v 1.36 2005/02/13 23:43:47 manu Exp $");
+__RCSID("$Id: conf_yacc.y,v 1.37 2005/03/19 07:38:53 manu Exp $");
 #endif
 #endif
 
@@ -66,6 +66,7 @@ lines	:	lines netblock '\n'
 	|	lines quiet '\n' 
 	|	lines noauth '\n' 
 	|	lines noaccessdb '\n' 
+	|	lines extendedregex '\n'
 	|	lines nospf '\n' 
 	|	lines delayedreject '\n' 
 	|	lines testmode '\n' 
@@ -214,6 +215,8 @@ quiet:		QUIET	{ if (C_NOTFORCED(C_QUIET)) conf.c_quiet = 1; }
 noauth:		NOAUTH	{ if (C_NOTFORCED(C_NOAUTH)) conf.c_noauth = 1; }
 	;
 noaccessdb:	NOACCESSDB	{ conf.c_noaccessdb = 1; }
+	;
+extendedregex:	EXTENDEDREGEX	{ conf.c_extendedregex = 1; }
 	;
 nospf:		NOSPF	{ if (C_NOTFORCED(C_NOSPF)) conf.c_nospf = 1; }
 	;
